<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textLuminance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="18dp"
        android:text="@string/lux"
        android:textSize="@dimen/padding_large"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/editTextLuminance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textLuminance"
        android:layout_toRightOf="@+id/textLuminance"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="@dimen/padding_large" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextLuminance"
        android:layout_toRightOf="@+id/editTextLuminance"
        android:minHeight="@dimen/padding_small"
        android:minWidth="@dimen/padding_small"
        android:text="@string/save"
        android:textSize="@dimen/padding_large" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSave"
        android:layout_toRightOf="@+id/buttonSave"
        android:minHeight="@dimen/padding_small"
        android:minWidth="@dimen/padding_small"
        android:text="@string/clear"
        android:textSize="@dimen/padding_large" />


    <TextView
        android:id="@+id/lightsensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/padding_large" />

    <TextView
        android:id="@+id/lightsensorData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lightsensor"
        android:textSize="@dimen/padding_large" />

    <TextView
        android:id="@+id/recordData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lightsensorData" />


</RelativeLayout>
